--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -1,23 +1,51 @@
 
-/* style.scss */
-$black: #222;
+@import './../../vars.scss';
+
+$spacing: 15px;
+$border: 1px dashed $grey;
 
 .title{
-  $spacing: 15px;
-
   color: $black;
   padding-bottom: $spacing;
-  border-bottom: 1px dashed #bbb;
+  border-bottom: $border;
   margin-bottom: $spacing;
 }
 
-.content{
+ul{
+  border-bottom: $border;
+  margin-bottom: $spacing;
+  padding-bottom: $spacing;
+
+  li{
+    line-height: 1.7em;
+    font-size: 1.1em;
+
+    a{
+      color: $main;
+      text-decoration: none;
+      border-bottom: 2px solid white;
+      transition: all 0.4s ease;
+
+      &:hover{
+        color: darken($main, 20%);
+        border-bottom-color: darken($main, 20%);
+      }
+    }
+  }
+}
+
+.content, footer{
   color: $black;
   font-weight: 300;
   font-size: 1.2em;
   line-height: 1.5em;
 
   a{
-    color: #1e96d7;
+    color: $main;
   }
+}
+
+footer{
+  border-top: $border;
+  padding-top: $spacing;
 }
